# dns_task

./: .gitignore  Makefile  Readme.md  pyproject.toml
docker/: Dockerfile  docker-compose.base.yaml
environments/: .env.template
src/: cli.py  config.py  logger.py  main.py
src/api/: lifespan.py
src/api/dto/: distribution.py  manage.py
src/api/routers/: distribution.py  manage.py
src/core/factories/: db.py
src/core/workflow/: calc.py  dataclasses.py  datasources.py
src/etl/: generate_logdays.py  generate_needs.py  generate_shipment_and_limits.py  migrate.py  populate_history.py  populate_products.py  populate_products_vol.py
src/frontend/: app.py
src/migrations/: queries.py
