# pyproject.toml — версия для `uv` (PEP 621)

####################################
#  базовое описание проекта        #
####################################
[project]
name = "dns_task"
version = "0.1.0"
description = "test task for DNS"
requires-python = ">=3.12, <4.0"
license = { text = "MIT" }
authors = [ { name = "me" } ]

# runtime‑зависимости (PEP 508)
dependencies = [
    "asyncpg >=0.30.0,<0.31.0",
    "fastapi>=0.116.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
    "structlog>=25.4.0",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
ci = [
    "factory-boy>=3.3.3",
    "faker>=37.4.0",
    "pytest >=8.4.1,<9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov >=6.2.1,<7.0.0",
]
lint = [
    "pre-commit >=4.2.0,<5.0.0",
    "pyright >=1.1.402,<1.2.0",
    "ruff >=0.12.0,<0.13.0",
]

####################################
#  менеджер пакетов `uv`           #
####################################
[tool.uv]
# автоматически подтягиваем dev-группу при sync/lock
default-groups = ["ci", "lint"]

# объявляем группу, чтобы uv понимал, что она существует
[tool.uv.dependency-groups]
ci = { optional = ["ci"] }
lint = { optional = ["lint"] }

####################################
#  pytest                          #
####################################
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
env_files = [".env"]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration",
    "unit: marks tests as unit",
]

####################################
#  pyright                         #
####################################
[tool.pyright]
include = ["src"]
exclude = ["tests", "**/__pycache__", ".venv"]
reportMissingImports = false
reportMissingTypeStubs = false
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = ""
venv = ""
extraPaths = ["typings", "tests", "src"]


[tool.pyright.diagnosticSeverityOverrides]
reportUnknownMemberType = "none"


####################################
#  Ruff                            #
####################################
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
lint.select = [
    "I", "Q", "E", "W", "F", "UP", "C", "B", "S", "ISC", "ASYNC", "T20",
    "ANN", "TCH", "PT", "RUF", "C90", "SIM",
]
lint.ignore = [
    "E501", "B008", "F821", "UP007", "UP032", "ANN401", "RUF012", "RUF002",
    "RUF001", "RUF003", "RUF100", "W291", "TC003", "W191"
]
lint.per-file-ignores = {"__init__.py" = ["F401"], "conftest.py" = ["F401", "ANN001", "ANN201"], "tests/*" = ["S", "PT012"]}
fix = true

[tool.ruff.format]
quote-style = "preserve"
indent-style = "tab"
line-ending = "lf"

####################################
#  build-system                    #
####################################
[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
